pod/sftptos3_deployment.yaml
apiVersion: apps/v1
kind: Deployment
# 元数据：定义名称和命名空间（建议按环境划分）
metadata:
  name: sftptos3-deployment
  namespace: prod
  labels:
    app: sftptos3-deployment
spec:
  replicas: 1
  # 标签选择器：用于匹配 Pod（必须和 template.metadata.labels 一致）
  selector:
    matchLabels:
      app: sftptos3-deployment
  template:
    metadata:
      name: sftptos3-deployment
      labels:
        app: sftptos3-deployment
    spec:
      containers:
        - name: sftptos3-deployment
          image: sftptos3-app_core_one:latest
          imagePullPolicy: Never   # ← 关键！告诉 k8s 别去远程拉，用本地镜像
          ports:
            - containerPort: 2222
          resources:
            requests:
              memory: "256Mi"   # 申请 256MB 内存（调度依据）
              cpu: "100m"       # 申请 0.1 个 CPU（1000m = 1 core）
            limits:
              memory: "512Mi"   # 最多用 512MB，超了会被 OOMKilled
              cpu: "500m"       # 最多用 0.5 个 CPU，超了会被限流
      restartPolicy: Always
