pod/sftptos3_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sftptos3-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sftptos3-service
                port:
                  number: 22
